--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,23 +4,12 @@ theme:
     name: 'material'
     palette:
 
-    # Light mode
-    - media: "(prefers-color-scheme: light)"
-      scheme: default
-      primary: pink
-      accent: indigo
-      toggle:
-        icon: material/toggle-switch-off-outline
-        name: Switch to dark mode
-
     # Dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: pink
+      primary: indigo
       accent: blue
-      toggle:
-        icon: material/toggle-switch
-        name: Switch to light mode
+
 
 # Extensions
 markdown_extensions:
